--- a/RoboFontProject.roboFontExt/info.plist
+++ b/RoboFontProject.roboFontExt/info.plist
@@ -24,5 +24,11 @@
 	<real>1441882165.731977</real>
 	<key>version</key>
 	<string>1.0</string>
+		<dict>
+		<key>repository</key>
+		<string>typemytype/profileRoboFontExtension</string>
+		<key>summary</key>
+		<string>A RoboFont extension that keeps track of a project.</string>
+	</dict>
 </dict>
 </plist>
