--- a/info.yaml
+++ b/info.yaml
@@ -3,7 +3,7 @@ developer: TypeMyType
 developerURL: http://typemytype.com
 launchAtStartUp: true
 mainScript: main.py
-version: '1.2'
+version: '1.3b'
 addToMenu: []
 html: false
 requiresVersionMajor: '1'
